--- a/03_transitions/src/css/App.css
+++ b/03_transitions/src/css/App.css
@@ -19,55 +19,61 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .item {
-    background: #2196F3;
-    color: #fff;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 1px;
-    padding: 10px;
+  background: #2196f3;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1px;
+  padding: 10px;
 }
 
 .btns {
   margin-top: 20px;
 }
 
-.btn-add, 
+.btn-add,
 .btn-remove {
-  background: #9E9E9E;
-  color: #FFf;
+  background: #9e9e9e;
+  color: #fff;
   text-align: center;
   padding: 10px;
 }
 .btn-remove {
-    background: #F44336;
+  background: #f44336;
 }
 
 .anim_index {
-    border-bottom: 1px solid #d4d4d4;
-    margin-bottom: 10px;
-    background: #e0e0e0;
+  border-bottom: 1px solid #d4d4d4;
+  margin-bottom: 10px;
+  background: #e0e0e0;
 }
 .anim_index a {
-    background: #E91E63;
-    display: inline-block;
-    margin: 5px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    color: white;
-    text-decoration: none;
-    font-size: 12px;
+  background: #e91e63;
+  display: inline-block;
+  margin: 5px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: white;
+  text-decoration: none;
+  font-size: 12px;
 }
 .showDiv {
-  background: #03A9F4;
+  background: #03a9f4;
   color: white;
   padding: 10px 20px;
   display: inline-block;
   cursor: pointer;
+  margin-bottom: 5px;
+  margin-left: 10px;
 }
 
 /*=======================================
@@ -81,4 +87,3 @@
 /*=======================================
                 TRANSITIONS GROUP 
 ========================================*/
-
